name:                programmatic-cad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/programmatic-cad#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -prof -fprof-auto -fprof-cafs "-with-rtsopts=-N -xc"
  build-depends:       base
                     , implicit
  default-language:    Haskell2010
